--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "5.4.*",
         "laravel/passport": "^4.0",
         "laravel/tinker": "~1.0",
+        "workerman/gateway-worker": "^3.0",
         "workerman/workerman": "^3.5"
     },
     "require-dev": {
